@@ -1,4 +1,10 @@
 2014-07-198 System Administrator <lrochette@electric-cloud.com>
+  * Appended the release comment to plugin descripti… …on when it is present
+
+2014-07-198 System Administrator <lrochette@electric-cloud.com>
+  * Appended the release comment to plugin description when it is present.
+
+2014-07-198 System Administrator <lrochette@electric-cloud.com>
   * Added CHANGELOG creation
 
 2014-07-13  Laurent Rochette <lrochette@electric-cloud.com>
